--- a/src/static/css/custom_style.css
+++ b/src/static/css/custom_style.css
@@ -357,12 +357,13 @@ img.logo {
  .loader-box div:nth-child(3) { animation-delay:400ms; }
  .loader-box div:nth-child(4) { animation-delay:500ms; }
 
- .bottom-nav-area {
+ .timestamp-area {
     bottom: 0px;
     position: fixed;
     z-index: 30000;
     font-size: small;
     margin: 5px;
+    background-color: white;
  }
 
  /* mobile menu */
